# codeclone

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  LICENSE-docs  LICENSES.md  README.md  SECURITY.md  codeclone.baseline.json  mkdocs.yml  pyproject.toml  zensical.toml
.agents/plugins/: marketplace.json
.cursor/: codeclone-hooks.json  hooks.json
.github/ISSUE_TEMPLATE/: bug_report.yml  cfg_semantics.yml  config.yml  false_positive.yml  feature_request.yml  mcp_server.yml
.github/workflows/: benchmark.yml  codeclone.yml  docs.yml  integrations.yml  publish.yml  tests.yml  validation-corpus.yml
benchmarks/: Dockerfile  mcp_token_budget.py  run_benchmark.py  run_docker_benchmark.sh
benchmarks/baselines/: reference-cp313.json
codeclone/: __init__.py  _cli_args.py  _cli_baselines.py  _cli_config.py  _cli_gating.py  _cli_meta.py  _cli_paths.py  _cli_reports.py  _cli_rich.py  _cli_runtime.py  _cli_summary.py  _coerce.py  _html_badges.py  _html_css.py  _html_data_attrs.py  _html_escape.py  _html_filters.py  _html_js.py  _html_snippets.py  _json_io.py  _report_blocks.py  _report_explain.py  _report_explain_contract.py  _report_grouping.py  _report_segments.py  _report_serialize.py  _report_types.py  _schema_validation.py  baseline.py  blockhash.py  blocks.py  cache.py  cache_io.py  cache_paths.py  cache_segments.py  cfg.py  cfg_model.py  cli.py  contracts.py  errors.py  (+21 more)
codeclone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
codeclone/_html_report/: __init__.py  _assemble.py  _components.py  _context.py  _glossary.py  _icons.py  _tables.py  _tabs.py
codeclone/analysis/: __init__.py  _module_walk.py  ast_helpers.py  blast_radius.py  cfg.py  class_metrics.py  fingerprint.py  normalizer.py  parser.py  phase_ledger.py  reachability.py  security_surfaces.py  suppressions.py  units.py
codeclone/analytics/: __init__.py  agent_labels.py  capabilities.py  contracts.py  exceptions.py  integrity.py  schema.py  workflow.py
codeclone/audit/: __init__.py  analysis_completed.py  events.py  reader.py  runtime.py  schema.py  validation.py  writer.py
codeclone/baseline/: __init__.py  _metrics_baseline_contract.py  _metrics_baseline_payload.py  _metrics_baseline_validation.py  clone_baseline.py  diff.py  metrics_baseline.py  trust.py
codeclone/blocks/: __init__.py
codeclone/budget/: __init__.py  estimator.py
codeclone/cache/: __init__.py  _canonicalize.py  _validators.py  _wire_decode.py  _wire_encode.py  _wire_helpers.py  entries.py  integrity.py  projection.py  store.py  versioning.py
codeclone/config/: __init__.py  analytics.py  analytics_specs.py  argparse_builder.py  intent_registry.py  intent_registry_defaults.py  memory.py  memory_defaults.py  memory_specs.py  observability.py  pyproject_loader.py  resolver.py  spec.py
codeclone/contracts/: __init__.py  errors.py  schemas.py
codeclone/controller_insights/: __init__.py  audit_trail.py  session_stats.py
codeclone/core/: __init__.py  _types.py  api_surface_payload.py  bootstrap.py  coverage_payload.py  discovery.py  discovery_cache.py  entrypoints.py  metrics_payload.py  parallelism.py  pipeline.py  reporting.py  security_surfaces_payload.py  worker.py
codeclone/domain/: __init__.py  findings.py  quality.py  source_scope.py
codeclone/findings/: __init__.py  ids.py
codeclone/memory/: __init__.py  coverage.py  display.py  enums.py  exceptions.py  governance.py  ide_governance.py  identity.py  locks.py  models.py  paths.py  project.py  report_trust.py  schema.py  schema_experience.py  schema_fts.py  schema_jobs.py  schema_meta.py  schema_migrate.py  schema_trajectory.py  search_index.py  sqlite_store.py  staleness.py  status_report.py  store.py  vacuum.py
codeclone/metrics/: __init__.py  _base.py  _risk.py  _visibility.py  adoption.py  api_surface.py  cohesion.py  complexity.py  coupling.py  coverage_join.py  dead_code.py  dependencies.py  god_modules.py  health.py  overloaded_modules.py  registry.py
codeclone/observability/: __init__.py  analysis_phases.py  db_fingerprint.py  models.py  profile.py  query.py  reason_kind.py  render_html.py  render_json.py  runtime.py  sqlite_access.py  views.py
codeclone/paths/: __init__.py  gitignore.py  workspace.py
codeclone/report/: __init__.py  _formatting.py  _source_kinds.py  blocks.py  derived.py  explain.py  explain_contract.py  findings.py  json_contract.py  markdown.py  merge.py  meta.py  overview.py  sarif.py  segments.py  serialize.py  suggestions.py  types.py
codeclone/scanner/: __init__.py
codeclone/ui_messages/: __init__.py  controller.py  formatters.py  help.py  labels.py  markers.py  runtime.py  styling.py
docs/: README-pypi.md  README.md  architecture.md  cfg.md  claude-desktop-bundle.md  codex-plugin.md  cursor-plugin.md  getting-started.md  index.md  mcp.md  plans-and-retention.md  privacy-policy.md  publishing.md  releasing.md  sarif.md  terms-of-use.md  vscode-extension.md
scripts/: build_docs_example_report.py  gen_options_doc.py  launch_mcp  lint_admonitions.py  lint_mkdocs_admonitions.py  sync_integrations.py
tests/: _assertions.py  _ast_helpers.py  _ast_metrics_helpers.py  _contract_snapshots.py  _import_graph.py  _mcp_fixtures.py  _report_access.py  _report_fixtures.py  _runpy_guard.py  _sqlite_cleanup.py  assertion_helpers.py  ast_test_helpers.py  audit_fixtures.py  conftest.py  docs_script_loader.py  memory_fixtures.py  plugin_test_helpers.py  test_adoption.py  test_analysis_phase_ledger.py  test_analytics_cli.py  test_analytics_foundation.py  test_analytics_integration.py  test_analytics_integrity.py  test_analytics_profiles.py  test_analytics_reporting.py  test_analytics_store.py  test_analytics_trajectory_selection.py  test_api_surface.py  test_architecture.py  test_audit_analysis_completed.py  test_audit_event_core_v2.py  test_audit_event_summary.py  test_audit_events_coverage.py  test_audit_reader.py  test_audit_schema.py  test_audit_writer.py  test_baseline.py  test_benchmark.py  test_blast_artifact_retrieval.py  test_blockhash.py  (+218 more)
(+525 files in other folders)
