[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeclone"
version = "2.0.0b2"
description = "Structural code quality analysis for Python"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Den Rozhnovskiy", email = "pytelemonbot@mail.ru" }
]
maintainers = [
    { name = "Den Rozhnovskiy", email = "pytelemonbot@mail.ru" }
]

requires-python = ">=3.10"

dependencies = [
    "pygments>=2.19.2",
    "rich>=14.3.2",
    "tomli>=2.0.1; python_version < '3.11'",
]

keywords = [
    "python",
    "ast",
    "cfg",
    "code-clone",
    "duplication",
    "static-analysis",
    "architecture",
    "control-flow",
    "ci",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/orenlab/codeclone"
Repository = "https://github.com/orenlab/codeclone"
Issues = "https://github.com/orenlab/codeclone/issues"
Changelog = "https://github.com/orenlab/codeclone/releases"
Documentation = "https://orenlab.github.io/codeclone/"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "build>=1.4.1",
    "twine>=5.0.0",
    "mypy>=1.19.1",
    "ruff>=0.15.8",
    "pre-commit>=4.5.1",
]

[project.scripts]
codeclone = "codeclone.cli:main"

[tool.setuptools]
packages = [
    "codeclone",
    "codeclone._html_report",
    "codeclone._html_report._sections",
    "codeclone.domain",
    "codeclone.metrics",
    "codeclone.report",
]

[tool.setuptools.package-data]
codeclone = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["codeclone"]

[tool.coverage.report]
show_missing = true
fail_under = 99

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["codeclone", "tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PIE", "PERF", "RUF"]

[tool.ruff.lint.per-file-ignores]
"codeclone/_html_css.py" = ["E501"]
"codeclone/_html_js.py" = ["E501"]
"codeclone/_html_report/_sections/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
