[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeclone"
version = "2.1.0a1"
description = "Structural Change Controller for AI-assisted Python development — baseline-aware, deterministic, built for CI and AI agents"
readme = { file = "docs/README-pypi.md", content-type = "text/markdown" }
license = "MPL-2.0 AND MIT"
license-files = ["LICENSE", "LICENSE-MIT"]

authors = [
    { name = "Den Rozhnovskiy", email = "pytelemonbot@mail.ru" }
]
maintainers = [
    { name = "Den Rozhnovskiy", email = "pytelemonbot@mail.ru" }
]

requires-python = ">=3.10"

dependencies = [
    "orjson>=3.11.9",
    "packaging>=24.0",
    "pydantic>=2.13.4",
    "pygments>=2.20.0",
    "rich>=15.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

keywords = [
    "python",
    "ast",
    "cfg",
    "code-clone",
    "duplication",
    "static-analysis",
    "architecture",
    "control-flow",
    "ci",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/orenlab/codeclone"
Repository = "https://github.com/orenlab/codeclone"
Issues = "https://github.com/orenlab/codeclone/issues"
Changelog = "https://github.com/orenlab/codeclone/releases"
Documentation = "https://orenlab.github.io/codeclone/"

[project.optional-dependencies]
mcp = [
    "mcp>=1.27.2,<2",
    "httpx>=0.27.1,<1",
]
token-bench = [
    "tiktoken>=0.13.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "build>=1.4.3",
    "twine>=6.2.0",
    "mypy>=1.20.1",
    "ruff>=0.15.15",
    "pre-commit>=4.5.1",
]

[project.scripts]
codeclone = "codeclone.main:main"
codeclone-mcp = "codeclone.surfaces.mcp.server:main"

[tool.setuptools]
packages = [
    "codeclone",
    "codeclone.analysis",
    "codeclone.baseline",
    "codeclone.blocks",
    "codeclone.cache",
    "codeclone.config",
    "codeclone.contracts",
    "codeclone.core",
    "codeclone.findings",
    "codeclone.findings.clones",
    "codeclone.findings.structural",
    "codeclone.domain",
    "codeclone.meta_markers",
    "codeclone.metrics",
    "codeclone.paths",
    "codeclone.qualnames",
    "codeclone.report",
    "codeclone.report.document",
    "codeclone.report.gates",
    "codeclone.report.html",
    "codeclone.report.html.assets",
    "codeclone.report.html.primitives",
    "codeclone.report.html.sections",
    "codeclone.report.html.widgets",
    "codeclone.report.renderers",
    "codeclone.scanner",
    "codeclone.surfaces",
    "codeclone.surfaces.cli",
    "codeclone.surfaces.mcp",
    "codeclone.surfaces.mcp.tools",
    "codeclone.ui_messages",
    "codeclone.utils",
]

[tool.setuptools.package-data]
codeclone = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["codeclone"]
omit = [
    # Protocol-only interface. Concrete memory stores are covered by shared
    # store contract tests. Do not add behavior to this module while omitted.
    "codeclone/memory/store.py",
]

[tool.codeclone]
baseline = "codeclone.baseline.json"
min_loc = 6
min_stmt = 4
fail_on_new = true
fail_cycles = true
fail_dead_code = true
fail_health = 80
fail_on_new_metrics = true
api_surface = true
golden_fixture_paths = ["tests/fixtures/golden_*"]
min_typing_coverage = 99
intent_registry_backend = "sqlite"
intent_registry_path = ".cache/codeclone/db/intents.sqlite3"
audit_enabled = true
audit_path = ".cache/codeclone/db/audit.sqlite3"
audit_payloads = "full"    # "off" | "compact" | "full"
audit_retention_days = 30


[tool.coverage.report]
show_missing = true
fail_under = 99

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["codeclone", "tests"]
exclude = [
    "^build/",
    "^site/",
    "^plugins/cursor-codeclone/scripts/launch_mcp\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "codeclone.surfaces.mcp._session_memory_mixin",
    "codeclone.surfaces.mcp._session_blast_radius_mixin",
    "codeclone.surfaces.mcp._session_claim_guard_mixin",
    "codeclone.surfaces.mcp._session_intent_mixin",
    "codeclone.surfaces.mcp._session_patch_contract_mixin",
    "codeclone.surfaces.mcp._session_review_receipt_mixin",
    "codeclone.surfaces.mcp._session_workflow_mixin",
]
disable_error_code = ["attr-defined", "misc"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PIE", "PERF", "RUF"]

[tool.ruff.lint.per-file-ignores]
"codeclone/report/html/assets/*.py" = ["E501"]
"codeclone/report/html/sections/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
